add capacitor release notes and EOL

--- a/src/content/docs/mobile-monitoring/new-relic-mobile/get-started/mobile-agents-eol-policy.mdx
+++ b/src/content/docs/mobile-monitoring/new-relic-mobile/get-started/mobile-agents-eol-policy.mdx
@@ -595,6 +595,43 @@ The following are the specific policies and dates for support of our mobile moni
   </tbody>
 </table>
 
+The following are the specific policies and dates for support of our mobile monitoring agent for Ionic Capacitor. Any versions not listed in the following table are no longer supported. Please [update your Capacitor plugin version](https://www.npmjs.com/package/@newrelic/newrelic-capacitor-plugin) to the [latest release](/docs/release-notes/mobile-release-notes/capacitor-release-notes).
+
+<table>
+  <thead>
+    <tr>
+      <th>
+        [Ionic Capacitor Plugin release](https://www.npmjs.com/package/@newrelic/newrelic-capacitor-plugin?activeTab=versions)
+      </th>
+
+      <th>
+        Start date
+      </th>
+
+      <th>
+        End date
+      </th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr>
+      <td>
+        v1.0.0
+      </td>
+
+      <td>
+        Jan 11, 2023
+      </td>
+    
+      <td>
+        Jan 11, 2024
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
 ## Mobile runtimes [#mobile-runtimes]
 
 For support of Android runtimes, New Relic follows [Google-Android EOL policies](https://endoflife.date/android).
